--- a/src/pretalx/orga/templates/orga/review/dashboard.html
+++ b/src/pretalx/orga/templates/orga/review/dashboard.html
@@ -47,6 +47,10 @@
             {% endif %}
         </div>
     </div>
+    <div class="d-md-flex justify-content-between">
+        <h2>{% translate "Review Proposals" %}</h2>
+        {% include "orga/event/component_link.html" %}
+    </div>
 
     <div class="ml-auto mb-2 d-flex">
         <details class="dropdown flip ml-auto fix-height mr-2" aria-haspopup="menu" role="menu">
