--- a/src/pretalx/orga/templates/orga/speaker/export.html
+++ b/src/pretalx/orga/templates/orga/speaker/export.html
@@ -6,7 +6,10 @@
 {% block extra_title %}{% translate "Export speaker data" %} :: {% endblock extra_title %}
 
 {% block content %}
-    <h2>{% translate "Export speaker data" %}</h2>
+    <div class="d-md-flex justify-content-between">
+        <h2>{% translate "Export speaker data" %}</h2>
+        {% include "orga/event/component_link.html" %}
+    </div>
 
     {% include "orga/includes/tablist.html" %}
 
