--- a/src/pretalx/orga/templates/orga/cfp/access_code_form.html
+++ b/src/pretalx/orga/templates/orga/cfp/access_code_form.html
@@ -7,13 +7,16 @@
 {% block extra_title %}{% if form.instance.pk %}{{ form.instance.code }}{% else %}{% translate "New access code" %}{% endif %} :: {% endblock extra_title %}
 
 {% block content %}
-    <h2>
-        {% if form.instance.pk %}
-            {% translate "Edit access code" %}
-        {% else %}
-            {% translate "New access code" %}
-        {% endif %}
-    </h2>
+    <div id="main-title" class="d-md-flex justify-content-between">
+        <h2>
+            {% if form.instance.pk %}
+                {% translate "Edit access code" %}
+            {% else %}
+                {% translate "New access code" %}
+            {% endif %}
+        </h2>
+        {% include "orga/event/component_link.html" %}
+    </div>
     {% if form.instance.pk and form.instance.submissions.exists %}
         <div class="alert alert-info">
             <span>
