--- a/src/pretalx/orga/templates/orga/mails/compose_choice.html
+++ b/src/pretalx/orga/templates/orga/mails/compose_choice.html
@@ -5,7 +5,10 @@
 {% block extra_title %}{% translate "Send emails" %} :: {% endblock extra_title %}
 
 {% block content %}
-  <h1>{% translate "Send emails" %}</h1>
+  <div class="d-md-flex justify-content-between">
+      <h2>{% translate "Send emails" %}</h2>
+      {% include "orga/event/component_link.html" %}
+  </div>
   <ul class="list-group">
     <a class="list-group-item list-group-item-action" href="{{ request.event.orga_urls.compose_mails_sessions }}">
       <h4>
