--- a/src/pretalx/orga/templates/orga/mails/template_list.html
+++ b/src/pretalx/orga/templates/orga/mails/template_list.html
@@ -12,16 +12,23 @@
 {% endblock scripts %}
 
 {% block mail_content %}
-    <h2 class="d-flex">
-        {% translate "Templates" %}
-        <span class="dialog-anchor ml-2" data-target="#info-dialog" data-toggle="dialog">
-            <i class="fa fa-question-circle-o text-info"></i>
-        </span>
-        <a href="{{ request.event.orga_urls.new_template }}" class="btn btn-success flip ml-auto">
-            <i class="fa fa-plus"></i>
-            {% translate "New custom template" %}
-        </a>
-    </h2>
+    <div class="d-md-flex justify-content-between">
+        <h2>
+            {% translate "Templates" %}
+            <span class="dialog-anchor ml-2" data-target="#info-dialog" data-toggle="dialog">
+                <i class="fa fa-question-circle-o text-info"></i>
+            </span>
+        </h2>
+        <div class="d-flex">
+            <div class="mr-2">
+                <a href="{{ request.event.orga_urls.new_template }}" class="btn btn-success flip ml-auto">
+                    <i class="fa fa-plus"></i>
+                    {% translate "New custom template" %}
+                </a>
+            </div>
+            {% include "orga/event/component_link.html" %}
+        </div>
+    </div>
     <dialog class="info-dialog" id="info-dialog">
         <div class="alert alert-info">
             <div>
