--- a/src/pretalx/orga/templates/orga/plugins.html
+++ b/src/pretalx/orga/templates/orga/plugins.html
@@ -4,7 +4,10 @@
 
 {% block extra_title %}{% translate "Plugins" %} :: {% endblock extra_title %}
 {% block content %}
-    <h2>{% translate "Plugins" %}</h2>
+    <div id="main-title" class="d-md-flex justify-content-between">
+        <h2>{% translate "Plugins" %}</h2>
+        {% include "orga/event/component_link.html" %}
+    </div>
 
     {% if grouped_plugins %}
         {% include "orga/includes/tablist.html" %}
