--- a/src/pretalx/orga/templates/orga/review/assignment-import.html
+++ b/src/pretalx/orga/templates/orga/review/assignment-import.html
@@ -8,7 +8,10 @@
 {% block extra_title %}{% translate "Assign reviewers" %} :: {% endblock extra_title %}
 
 {% block content %}
-    <h2>{% translate "Assign reviewers" %}</h2>
+    <div class="d-md-flex justify-content-between">
+        <h2>{% translate "Assign reviewers" %}</h2>
+        {% include "orga/event/component_link.html" %}
+    </div>
     <p>
         {% blocktranslate trimmed with href="#" %}
             You can upload your reviewer assignments from a JSON file here. You can either have the proposal codes (e.g. “UX3N1”) as keys, and user identification as values, or the other way around. User identification can be either the reviewer’s email address or their user code (e.g. “34KJN”). You can find an example file <a href="{{ href }}">here</a>.
