--- a/src/pretalx/orga/templates/orga/schedule/export.html
+++ b/src/pretalx/orga/templates/orga/schedule/export.html
@@ -7,7 +7,10 @@
 {% block extra_title %}{% translate "Export schedule data" %} :: {% endblock extra_title %}
 
 {% block schedule_content %}
-    <h2>{% translate "Export schedule data" %}</h2>
+    <div class="d-md-flex justify-content-between">
+        <h2>{% translate "Export schedule data" %}</h2>
+        {% include "orga/event/component_link.html" %}
+    </div>
 
     {% include "orga/includes/tablist.html" %}
 
