--- a/src/pretalx/orga/templates/orga/settings/widget.html
+++ b/src/pretalx/orga/templates/orga/settings/widget.html
@@ -21,12 +21,15 @@
 {% endblock scripts %}
 
 {% block settings_content %}
-    <h2>
-        {% translate "Widget settings" %}
-        <span class="dialog-anchor" data-target="#info-dialog" data-toggle="dialog">
-            <i class="fa fa-question-circle-o text-info"></i>
-        </span>
-    </h2>
+    <div id="main-title" class="d-md-flex justify-content-between">
+        <h2>
+            {% translate "Widget settings" %}
+            <span class="dialog-anchor" data-target="#info-dialog" data-toggle="dialog">
+                <i class="fa fa-question-circle-o text-info"></i>
+            </span>
+        </h2>
+        {% include "orga/event/component_link.html" %}
+    </div>
     <dialog id="info-dialog">
         <div class="alert alert-info flip ml-auto">
             {% blocktranslate trimmed %}
