--- a/src/pretalx/orga/templates/orga/submission/base.html
+++ b/src/pretalx/orga/templates/orga/submission/base.html
@@ -34,19 +34,22 @@
         {% has_perm "submission.review_submission" request.user submission as can_review %}
         {% has_perm "orga.view_speakers" request.user request.event as can_view_speakers %}
         {% has_perm "orga.send_mails" request.user request.event as can_send_mails %}
-        <h2>
-            <span>
-                {{ quotation_open }}{% if can_view_speakers %}{{ submission.title }}{% else %}{{ submission.anonymised.title|default:submission.title }}{% endif %}{{ quotation_close }}
-                {% if submission.speakers.exists and can_view_speakers %}
-                    – {% include "orga/includes/submission_speaker_names.html" with lightbox=True %}
-                {% endif %}
-                {% if can_edit_submission %}
-                    {% include "orga/submission/state_dropdown.html" with submission=submission %}
-                {% else %}
-                    {% include "cfp/event/fragment_state.html" with state=submission.state as_badge=True %}
-                {% endif %}
-            </span>
-        </h2>
+        <div id="main-title" class="d-md-flex justify-content-between">
+            <h2>
+                <span>
+                    {{ quotation_open }}{% if can_view_speakers %}{{ submission.title }}{% else %}{{ submission.anonymised.title|default:submission.title }}{% endif %}{{ quotation_close }}
+                    {% if submission.speakers.exists and can_view_speakers %}
+                        – {% include "orga/includes/submission_speaker_names.html" with lightbox=True %}
+                    {% endif %}
+                    {% if can_edit_submission %}
+                        {% include "orga/submission/state_dropdown.html" with submission=submission %}
+                    {% else %}
+                        {% include "cfp/event/fragment_state.html" with state=submission.state as_badge=True %}
+                    {% endif %}
+                </span>
+            </h2>
+            {% include "orga/event/component_link.html" %}
+        </div>
 
         <div role="tablist" class="mb-4">
             <a role="tab" href="{{ submission.orga_urls.base }}" {% if "submissions.content" in url_name %}aria-selected="true"{% else %}aria-selected="false"{% endif %}>
