--- a/src/pretalx/orga/templates/orga/submission/feedbacks_list.html
+++ b/src/pretalx/orga/templates/orga/submission/feedbacks_list.html
@@ -7,7 +7,10 @@
 {% block extra_title %}{% translate "Attendee feedback" %} :: {% endblock extra_title %}
 
 {% block content %}
-    <h2 class="d-flex w-100 justify-content-between align-items-start">{% translate "Attendee feedback" %}</h2>
+    <div id="main-title" class="d-md-flex justify-content-between">
+        <h2>{% translate "Attendee feedback" %}</h2>
+        {% include "orga/event/component_link.html" %}
+    </div>
 
     {% regroup feedback|dictsort:"talk.title" by talk.title as feedbacks_list %}
 
