--- a/src/pretalx/orga/templates/orga/submission/list.html
+++ b/src/pretalx/orga/templates/orga/submission/list.html
@@ -25,35 +25,40 @@
     {% has_perm "orga.change_submission_state" request.user request.event as can_change_submission %}
     {% has_perm "orga.view_speakers" request.user request.event as can_view_speakers %}
     {% has_perm "orga.send_mails" request.user request.event as can_send_mails %}
-    <h2 class="d-flex align-items-center">
+    <h2 class="d-md-flex align-items-center">
         <span>
             {{ page_obj.paginator.count }}
             {% blocktranslate trimmed count count=page_obj.paginator.count %}
                 session
             {% plural %}
                 sessions
-            {% endblocktranslate %}
+            {% endblocktranslate %} 
         </span>
         <p class="flip ml-auto">
-            {% if can_send_mails %}
-                <a class="btn btn-outline-info mt-2" href="{{ request.event.orga_urls.compose_mails_sessions }}{% querystring page="" %}">
-                    <i class="fa fa-envelope"></i>
-                    {% translate "Send email" %}
-                </a>
-            {% endif %}
-            {% if pending_changes and can_change_submission %}
-                <a class="btn btn-info mt-2" href="{{ request.event.orga_urls.apply_pending }}">
-                    {% translate "Apply pending changes" %} ({{ pending_changes }})
-                </a>
-            {% endif %}
-            {% if can_create_submission %}
-                <a href="{{ request.event.orga_urls.new_submission }}" class="btn btn-info mt-2">
-                    <i class="fa fa-plus"></i> {% translate "Add new session or proposal" %}
-                </a>
-                <a class="btn btn-link" href="{{ request.event.orga_urls.submission_feed }}" title="{% translate "Proposal feed" %}">
-                    <i class="fa fa-feed"></i>
-                </a>
-            {% endif %}
+            <div>
+                {% if can_send_mails %}
+                    <a class="btn btn-outline-info mt-2" href="{{ request.event.orga_urls.compose_mails_sessions }}{% querystring page="" %}">
+                        <i class="fa fa-envelope"></i>
+                        {% translate "Send email" %}
+                    </a>
+                {% endif %}
+                {% if pending_changes and can_change_submission %}
+                    <a class="btn btn-info mt-2" href="{{ request.event.orga_urls.apply_pending }}">
+                        {% translate "Apply pending changes" %} ({{ pending_changes }})
+                    </a>
+                {% endif %}
+                {% if can_create_submission %}
+                    <a href="{{ request.event.orga_urls.new_submission }}" class="btn btn-info mt-2">
+                        <i class="fa fa-plus"></i> {% translate "Add new session or proposal" %}
+                    </a>
+                    <a class="btn btn-link" href="{{ request.event.orga_urls.submission_feed }}" title="{% translate "Proposal feed" %}">
+                        <i class="fa fa-feed"></i>
+                    </a>
+                {% endif %}
+            </div>
+            <div>
+                {% include "orga/event/component_link.html" %}
+            </div>
         </p>
     </h2>
 
